deploy/compute/paperclip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: paperclip
  labels:
    app.kubernetes.io/instance: paperclip
    app.kubernetes.io/name: paperclip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: paperclip
    app.kubernetes.io/name: paperclip
  ports:
    - name: http
      protocol: TCP
      port: 3100
      targetPort: http
